<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.AcceptContractFragment">

    <ImageView
        android:id="@+id/toolImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/coink_top3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnrLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/toolImg2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/coink_secure"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ESTAS MUY CERCA DE SER PARTE DE COINK."
                        android:textStyle="bold"
                        android:textColor="@color/darkGreen"
                        android:textSize="22sp"
                        android:paddingStart="15dp"
                        android:paddingTop="15dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accept_contract_caption"
                        android:textSize="20sp"
                        android:padding="15dp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="15dp"
                android:layout_marginTop="8dp"
                android:background="@color/greenCoink"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LO MÁS IMPORTANTE"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/darkGreen"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_caption"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/txtReadContract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_your_contract"
                    android:clickable="true"
                    android:textColor="@color/darkGreen"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/acceptContract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_contract"
                    android:textColor="@color/darkGreen"
                    android:textSize="18sp"
                    android:buttonTint="@color/greenCoink"/>
            </LinearLayout>
            <Button
                android:id="@+id/acceptButtonUnable"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/aceptar"
                android:textSize="20sp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_margin="15dp"/>
            <Button
                android:id="@+id/acceptButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/greenCoink"
                android:text="@string/aceptar"
                android:textSize="20sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:visibility="gone"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>