<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.AccountDataFragment">

    <ImageView
        android:id="@+id/toolImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/coink_top_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnrLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/toolImg2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/coink_pork"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="¿CUÁLES SON TUS DATOS?"
                        android:textStyle="bold"
                        android:textColor="@color/darkGreen"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:paddingTop="15dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_data_caption"
                        android:textSize="20sp"
                        android:padding="15dp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="15dp"
                android:layout_marginTop="8dp"
                android:background="@color/greenCoink"/>
            <LinearLayout
                android:id="@+id/lnrLayoutDocument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/txtDocument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Documento de identidad"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/darkGreen"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:text="Tipo de documento"
                    android:textSize="16sp"
                    android:textColor="#8C8989"
                    android:background="?android:attr/selectableItemBackground"/>

                <Spinner
                    android:id="@+id/spinnerDocumentType"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="16dp"
                    android:layout_marginTop="-1dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_document_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundMode="none"
                    android:background="@drawable/edit_text_bottom_border">

                <EditText
                    android:id="@+id/txtDocumentNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Número de documento"
                    android:maxLength="10"
                    android:inputType="number"
                    android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_DocumentDateExpedition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundMode="none"
                    android:background="@drawable/edit_text_bottom_border">

                <EditText
                    android:id="@+id/txtDocumentDateExpedition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fecha de expedición del documento"
                    android:maxLength="10"
                    android:inputType="date"
                    android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_DocumentDateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundMode="none"
                    android:background="@drawable/edit_text_bottom_border">

                <EditText
                    android:id="@+id/txtDocumentDateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Fecha de nacimiento"
                    android:maxLength="10"
                    android:inputType="date"
                    android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:text="Genero"
                    android:textSize="18sp"
                    android:textColor="#8C8989"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"/>
                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="16dp"
                    android:layout_marginTop="-1dp"
                    android:prompt="@string/select_gender_hint"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/txtConfigAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Configura tu cuenta"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/darkGreen"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundMode="none"
                    android:background="@drawable/edit_text_bottom_border">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Correo electrónico"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_txtEmailConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundMode="none"
                        android:background="@drawable/edit_text_bottom_border">

                        <EditText
                            android:id="@+id/txtEmailConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Confirmar correo electronico"
                            android:inputType="textEmailAddress"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageView
                        android:id="@+id/imgConfirmEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/til_txtEmailConfirm"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_check_24"
                        android:background="?android:attr/selectableItemBackground"
                        android:visibility="gone"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_txtPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundMode="none"
                        android:background="@drawable/edit_text_bottom_border">

                        <EditText
                            android:id="@+id/txtPin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Pin de seguridad"
                            android:maxLength="4"
                            android:inputType="numberPassword"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/btnShowPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/til_txtPin"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_remove_red_eye_24"
                        android:background="?android:attr/selectableItemBackground"/>

                    <ImageButton
                        android:id="@+id/btnHidePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/til_txtPin"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_visibility_off_24"
                        android:background="?android:attr/selectableItemBackground"
                        android:visibility="gone"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_txtPinConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundMode="none"
                        android:background="@drawable/edit_text_bottom_border">

                        <EditText
                            android:id="@+id/txtPinConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Confirmar Pin de seguridad"
                            android:maxLength="4"
                            android:inputType="numberPassword"
                            android:textSize="16sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageButton
                        android:id="@+id/btnShowConfirmPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/til_txtPinConfirm"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_remove_red_eye_24"
                        android:background="?android:attr/selectableItemBackground"/>

                    <ImageButton
                        android:id="@+id/btnHideConfirmPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/til_txtPinConfirm"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_visibility_off_24"
                        android:background="?android:attr/selectableItemBackground"
                        android:visibility="gone"/>
                </RelativeLayout>
            </LinearLayout>
            <Button
                android:id="@+id/registerButtonUnable"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/siguiente"
                android:textSize="20sp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_margin="15dp"/>
            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/greenCoink"
                android:text="@string/siguiente"
                android:textSize="20sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:visibility="gone"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>